myapp/deployment-myapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps-crc.testing/openshift/httpd
        name: httpd
        ports:
        - containerPort: 8080
