myapp/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: cont1
    image: bitnami/nginx
