myapp/pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  containers:
  - name: cont2
    image: bitnami/nginx
