myapp/svc-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: myapp
  type: NodePort
