myapp/route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: app.ezz.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              number: 8080
